--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "packageManager": "npm@10.9.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run build:sw",
+    "build:sw": "node node_modules/next-pwa/build.js",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "^14.2.22",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
